--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "elemental": "^0.6.1",
     "react": "^16.3.2",
     "react-bootstrap": "^0.32.1",
     "react-scripts": "1.1.4"
