--- a/package.json
+++ b/package.json
@@ -20,5 +20,11 @@
     "jest-cli": "^20.0.4",
     "react-dom": "^16.3.2",
     "react-test-renderer": "^16.3.2"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.js",
+      "!src/index.js"
+    ]
   }
 }
